minor errors
minor problems fixed